@@ -2,6 +2,7 @@
 
 - Code refactoring for better maintainability
 - Adds some confirmation popups on Artists and Playlists page 
+- Improves error message display
 
 # 6.0.3
 
